# strap

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  strap.c  strap.h
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
benchmarks/: strap_bench.c
docs/: API-Reference.md  Examples.md  Quick-Start.md
examples/: join_example.c  readline_example.c
scripts/: build_windows_msvc.bat
tests/: test_strap.c
